[package]
name = "cirrus-cli"
description = "CLI tools for Cirrus AT Protocol PDS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "pds"
path = "src/main.rs"

[dependencies]
cirrus-common.workspace = true
cirrus-pds.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web server
axum.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Cryptography
k256.workspace = true
rand.workspace = true
base64.workspace = true

# Password hashing
bcrypt.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP client
reqwest.workspace = true

# CLI
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true

# Utilities
url.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
