[package]
name = "cirrus-common"
description = "Common types and utilities for Cirrus AT Protocol PDS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true

# Cryptography
k256.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
multibase.workspace = true
multihash.workspace = true

# JWT
jsonwebtoken.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
url.workspace = true
chrono.workspace = true
bytes.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
