[package]
name = "cirrus-pds"
description = "AT Protocol Personal Data Server (PDS) implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cirrus-common.workspace = true
cirrus-oauth.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
serde_bytes.workspace = true

# Database
rusqlite.workspace = true
tokio-rusqlite.workspace = true

# Cryptography
k256.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
multibase.workspace = true
multihash.workspace = true

# JWT
jsonwebtoken.workspace = true

# Password hashing
bcrypt.workspace = true

# Rate limiting
governor.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# HTTP client
reqwest.workspace = true

# DNS resolution
trust-dns-resolver.workspace = true

# Utilities
url.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
parking_lot.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true
wiremock.workspace = true
tempfile.workspace = true

[lints]
workspace = true
